@@ -833,13 +833,13 @@ INSERT INTO `table_columns` VALUES ('sessions',6,'user_agent','varchar(128)','NO
 INSERT INTO `table_columns` VALUES ('sessions',7,'start_time','timestamp','NO','','current_timestamp()','');
 INSERT INTO `table_columns` VALUES ('sessions',8,'transactions','int(10) unsigned','NO','','1','');
 INSERT INTO `table_columns` VALUES ('settings',1,'name','varchar(75)','NO','PRI','','');
-INSERT INTO `table_columns` VALUES ('settings',2,'value','varchar(2048)','NO','','','');
+INSERT INTO `table_columns` VALUES ('settings',2,'value','varchar(4096)','NO','','','');
 INSERT INTO `table_columns` VALUES ('settings_tree',1,'user_id','mediumint(8) unsigned','NO','PRI','0','');
 INSERT INTO `table_columns` VALUES ('settings_tree',2,'graph_tree_item_id','int(10) unsigned','NO','PRI','0','');
 INSERT INTO `table_columns` VALUES ('settings_tree',3,'status','tinyint(4)','NO','','0','');
 INSERT INTO `table_columns` VALUES ('settings_user',1,'user_id','smallint(8) unsigned','NO','PRI','0','');
 INSERT INTO `table_columns` VALUES ('settings_user',2,'name','varchar(75)','NO','PRI','','');
-INSERT INTO `table_columns` VALUES ('settings_user',3,'value','varchar(2048)','NO','','','');
+INSERT INTO `table_columns` VALUES ('settings_user',3,'value','varchar(4096)','NO','','','');
 INSERT INTO `table_columns` VALUES ('settings_user_group',1,'group_id','smallint(8) unsigned','NO','PRI','0','');
 INSERT INTO `table_columns` VALUES ('settings_user_group',2,'name','varchar(50)','NO','PRI','','');
 INSERT INTO `table_columns` VALUES ('settings_user_group',3,'value','varchar(2048)','NO','','','');
